<resources>
    <string name="app_name">NewsAppExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="google_news">Google News</string>
    <string name="all">ALL</string>
    <string name="business">BUSINESS</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="health">HEALTH</string>
    <string name="science">SCIENCE</string>
    <string name="sports">SPORTS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="ticaret_bakanl_nca_haz_rlanan">Ticaret Bakanlığınca hazırlanan "İkinci El Motorlu Kara Taşıtlarının Ticareti Hakkında Yönetmelikte Değişiklik Yapılmasına Dair Yönetmelik" Resmi Gazete'de yayımlanarak yürürlüğe girdi.
Mevcut mevzuata göre, ikinci el motorlu kara taşıtı ticaretiyle iştigal edilebilmesi için yetki belgesi sahibi olunması gerekirken düzenlemeyle yetki belgesinin iptaline ilişkin hususlar belirlendi.
Yönetmelik değişikliğiyle, ilk tescil motorlu kara taşıtı ticareti faaliyetinde bulunan yetkili bayilerin, stoklarında bulunmasına rağmen taşıt satışından kaçınmaları, taşıtın üretici veya distribütör </string>
</resources>